Table "users" {
  "id" UUID [pk]
  "email" VARCHAR(100) [unique, not null]
  "password_hash" VARCHAR(255) [not null]
  "first_name" VARCHAR(100)
  "last_name" VARCHAR(100)
  "avatar_url" VARCHAR(255)
  "role" VARCHAR(30) [default: 'user']
  "last_active" TIMESTAMP
  "is_active" BOOLEAN [default: FALSE]
  "email_verified" BOOLEAN [not null, default: FALSE]
  "verification_code" VARCHAR(255)
  "verification_expires" TIMESTAMP
  "password_reset_code" VARCHAR(255)
  "password_reset_expires" TIMESTAMP
  "is_enabled" BOOLEAN [not null, default: TRUE]
  "created_at" TIMESTAMP [default: `CURRENT_TIMESTAMP`]
  "updated_at" TIMESTAMP [default: `CURRENT_TIMESTAMP`]

  Indexes {
    verification_code [name: "idx_users_verification_code"]
    password_reset_code [name: "idx_users_password_reset_code"]
  }
}

Table "teams" {
  "id" SERIAL [pk, increment]
  "name" VARCHAR(100) [not null]
  "code" VARCHAR(20) [not null]
  "description" TEXT
  "created_at" TIMESTAMP [default: `CURRENT_TIMESTAMP`]
  "updated_at" TIMESTAMP [default: `CURRENT_TIMESTAMP`]
}

Table "user_team" {
  "user_id" UUID
  "team_id" INT
  "role" VARCHAR(30)

  Indexes {
    (user_id, team_id) [pk]
  }
}

Table "projects" {
  "id" SERIAL [pk, increment]
  "team_id" INT [not null]
  "name" VARCHAR(100) [not null]
  "description" TEXT
  "created_by" UUID [not null]
  "created_at" TIMESTAMP [default: `CURRENT_TIMESTAMP`]
  "updated_at" TIMESTAMP [default: `CURRENT_TIMESTAMP`]
}

Table "project_members" {
  "project_id" INT
  "user_id" UUID
  "role" VARCHAR(30)

  Indexes {
    (project_id, user_id) [pk]
  }
}

Table "tasks" {
  "id" SERIAL [pk, increment]
  "project_id" INT
  "title" VARCHAR(200) [not null]
  "statu" VARCHAR(30) [default: 'todo']
  "priority" VARCHAR(30)
  "assigned_to" UUID
  "created_by" UUID [not null]
  "due_date" DATE
  "completed_at" DATE
  "created_at" TIMESTAMP [default: `CURRENT_TIMESTAMP`]
  "updated_at" TIMESTAMP [default: `CURRENT_TIMESTAMP`]
}

Table "task_comments" {
  "id" SERIAL [pk, increment]
  "task_id" INT [not null]
  "user_id" UUID [not null]
  "content" TEXT [not null]
  "created_at" TIMESTAMP [default: `CURRENT_TIMESTAMP`]
  "updated_at" TIMESTAMP [default: `CURRENT_TIMESTAMP`]
}

Table "conversations" {
  "id" SERIAL [pk, increment]
  "type" VARCHAR(30) [not null]
  "team_id" INT
  "project_id" INT
  "created_at" TIMESTAMP [default: `CURRENT_TIMESTAMP`]
}

Table "messages" {
  "id" SERIAL [pk, increment]
  "conversation_id" INT
  "sender_id" UUID [not null]
  "content" TEXT [not null]
  "created_at" TIMESTAMP [default: `CURRENT_TIMESTAMP`]
  "updated_at" TIMESTAMP [default: `CURRENT_TIMESTAMP`]
}

Table "conversation_participants" {
  "conversation_id" INT
  "user_id" UUID
  "last_read_message_id" INT
  "last_read_at" TIMESTAMP

  Indexes {
    (conversation_id, user_id) [pk]
  }
}

Table "notifications" {
  "id" SERIAL [pk, increment]
  "user_id" UUID [not null]
  "content" TEXT [not null]
  "type" VARCHAR(30) [not null]
  "reference_id" INT
  "is_read" BOOLEAN [default: FALSE]
  "created_at" TIMESTAMP [default: `CURRENT_TIMESTAMP`]
}

Table "activity_logs" {
  "id" SERIAL [pk, increment]
  "user_id" UUID [not null]
  "action" VARCHAR(100)
  "description" TEXT
  "created_at" TIMESTAMP [default: `CURRENT_TIMESTAMP`]
}

Ref:"users"."id" < "user_team"."user_id"

Ref:"teams"."id" < "user_team"."team_id"

Ref:"teams"."id" < "projects"."team_id"

Ref:"users"."id" < "projects"."created_by"

Ref:"projects"."id" < "project_members"."project_id"

Ref:"users"."id" < "project_members"."user_id"

Ref:"projects"."id" < "tasks"."project_id"

Ref:"users"."id" < "tasks"."assigned_to"

Ref:"users"."id" < "tasks"."created_by"

Ref:"tasks"."id" < "task_comments"."task_id"

Ref:"users"."id" < "task_comments"."user_id"

Ref:"teams"."id" < "conversations"."team_id"

Ref:"projects"."id" < "conversations"."project_id"

Ref:"conversations"."id" < "messages"."conversation_id"

Ref:"users"."id" < "messages"."sender_id"

Ref:"conversations"."id" < "conversation_participants"."conversation_id" [delete: cascade]

Ref:"users"."id" < "conversation_participants"."user_id" [delete: cascade]

Ref:"messages"."id" < "conversation_participants"."last_read_message_id" [delete: cascade]

Ref:"users"."id" < "notifications"."user_id"

Ref:"users"."id" < "activity_logs"."user_id"
